Major and minor changes  * Updated to rails 3.1.0 to close #13  * Added song list view partial views to close #16

--- a/app/views/songs/_listEntry.html.haml
+++ b/app/views/songs/_listEntry.html.haml
@@ -1,11 +1,40 @@
 .songInfoLine
-  .mediaTitle= song.title
-  .trackNumber= song.tracknumber
-  .length= song.length
-  .albumName= song.album
-  .artistName= song.artist
-  .playCount= song.playcount
-  .mediaRating= song.rating
+  - if song.title != nil
+    .mediaTitle
+      %a{:href => "#"}= song.title
+  -else
+    .mediaTitle
+      %i="nil"
+  - if song.tracknumber != nil
+    .trackNumber= song.tracknumber
+  -else
+    .trackNumber
+      %i="nil"
+  - if song.length != nil
+    .length= song.length
+  -else
+    .length
+      %i="nil"
+  - if song.album != nil
+    .albumName= song.album
+  -else
+    .albumName
+      %i="nil"
+  - if song.artist != nil
+    .artistName= song.artist
+  -else
+    .artistName
+      %i="nil"
+  - if song.playcount != nil
+    .playCount= song.playcount
+  -else
+    .playCount
+      %i="nil"
+  - if song.rating != nil
+    .mediaRating= song.rating
+  -else
+    .mediaRating
+      %i="nil"
   .listItemActions
     %a{:href => "#"}="edit"
 .songEditSection
