--- a/app/views/songs/_listView.html.haml
+++ b/app/views/songs/_listView.html.haml
@@ -7,6 +7,6 @@
     .artistName= "Artist"
     .playCount= "Plays"
     .mediaRating= "Rating"
-    .listItemActions= " "
+    .listItemActions= "Actions"
   - @songs.each do |song|
     = render :partial => "songs/listEntry", :locals => { :song => song }
