Removes excess sass files from 3.1.0 update

--- a/app/assets/stylesheets/songs.css.sass
+++ b/app/assets/stylesheets/songs.css.sass
@@ -10,8 +10,8 @@ $entryColor: #adc1d6
   background-color: inherit
   border-right-style: dotted
   border-right-width: 1px
-  border-bottom-style: solid
-  border-bottom-width: 1px
+  border-top-style: solid
+  border-top-width: 1px
   border-color: black
   float: left
   text-align: right
