Closes #17  * Updates CSS  * Adds Ids to listing divs  * Adds jQuery to handle song list accordion functionality

--- a/app/assets/stylesheets/songs.css.sass
+++ b/app/assets/stylesheets/songs.css.sass
@@ -4,7 +4,7 @@ $entryColor: #adc1d6
   border-style: solid
   border-width: 2px
   width: 832px
-  padding-bottom: 18px
+  padding-bottom: 19px
 
 .listCell
   background-color: inherit
@@ -58,6 +58,15 @@ $entryColor: #adc1d6
   float: left
   padding-right: 5px
   width: 95px
+
+.editLink
+  color: #666666
+  text-decoration: underline
+  width: 35px
+
+.editLink:hover
+  color: #eeeeee
+  cursor: pointer
 
 .listHeaderSection
   background-color: #006295
