Adds view controller and index
 * This controller will house the pages to play media
 * Adds routing for /{mediatype}-{id} to go to view#index
  * mediatype can be "song" or "video" as of now
  * id is the database id of the media

--- a/app/assets/stylesheets/songs.css.sass
+++ b/app/assets/stylesheets/songs.css.sass
@@ -3,6 +3,7 @@ $entryColor: #adc1d6
 .songListView
   border-style: solid
   border-width: 2px
+  border-top-width: 1px
   width: 832px
   padding-bottom: 19px
 
