Adds urls to song list titles
 * links back to the view index with that particular media.

--- a/app/views/songs/_listEntry.html.haml
+++ b/app/views/songs/_listEntry.html.haml
@@ -1,7 +1,7 @@
 .songInfoLine{:id => ["songInfoLine_" + song.id.to_s]}
   - if song.title != nil
     .mediaTitle
-      %a{:href => "#"}= song.title
+      %a{:href => "/song-" + song.id.to_s}= song.title
   -else
     .mediaTitle
       %i="nil"
