Adds jplayer functionality
 * Adds jplayer files to project
 * Adds route to deliver media files /play/{mediatype}/{id}
 * Adds jplayer partial and functionality to /view/index.html.haml

--- a/app/views/view/index.html.haml
+++ b/app/views/view/index.html.haml
@@ -1,7 +1,5 @@
 %h1 View#index
-%p Find me in app/views/view/index.html.haml
 - if @media == nil
   .content="none"
 - else
-  .contentTitle=@media.title
-  .contentFilename=@media.filename
+  = render :partial => "view/jplayer", :locals => { :media => @media }
