Updates music list headers and css

--- a/app/assets/stylesheets/songs.css.sass
+++ b/app/assets/stylesheets/songs.css.sass
@@ -4,7 +4,7 @@ $entryColor: #adc1d6
   border-style: solid
   border-width: 2px
   border-top-width: 1px
-  width: 832px
+  width: 1112px
   padding-bottom: 19px
 
 .listCell
@@ -25,7 +25,8 @@ $entryColor: #adc1d6
 .trackNumber
   @extend .listCell
   padding-right: 5px
-  width: 70px
+  width: 50px
+  text-align: center
 
 .length
   @extend .listCell
@@ -35,12 +36,12 @@ $entryColor: #adc1d6
 .albumName
   @extend .listCell
   padding-right: 5px
-  width: 95px
+  width: 295px
 
 .artistName
   @extend .listCell
   padding-right: 5px
-  width: 95px
+  width: 195px
 
 .playCount
   @extend .listCell
