--- a/app/views/songs/_listView.html.haml
+++ b/app/views/songs/_listView.html.haml
@@ -1,7 +1,7 @@
 .songListView
   .listHeaderSection
     .mediaTitle= "Title"
-    .trackNumber= "Track #"
+    .trackNumber= "Track"
     .length= "Length"
     .albumName= "Album"
     .artistName= "Artist"
