--- a/app/assets/stylesheets/songs.css.sass
+++ b/app/assets/stylesheets/songs.css.sass
@@ -84,3 +84,14 @@ $entryColor: #adc1d6
 .songEditSection
   display: none
   margin-top: 20px
+
+.songListView .current 
+  padding-right: 12px
+  background-repeat: no-repeat
+  background-position: right center
+
+.songListView .asc 
+  background-image: url(shared/up_arrow.gif)
+
+.songListView .desc 
+  background-image: url(shared/down_arrow.gif)
