Removes Video resources

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,4 +1,4 @@
 .navBar
   =link_to 'Home', root_path
   =link_to 'Songs', songs_path
-  =link_to 'Videos', videos_path
+  /=link_to 'Videos', videos_path
