--- a/app/assets/stylesheets/songs.css.sass
+++ b/app/assets/stylesheets/songs.css.sass
@@ -74,6 +74,12 @@ $entryColor: #adc1d6
   background-color: #006295
   color: #cccccc
 
+.listHeaderSection a
+  color: #cccccc
+
+.listHeaderSection a:hover
+  color: #ffffff
+
 .songInfoLine
   clear: left
   background-color: $entryColor
@@ -91,7 +97,7 @@ $entryColor: #adc1d6
   background-position: right center
 
 .songListView .asc 
-  background-image: url(shared/up_arrow.gif)
+  background-image: url(shared/arrow_down_8x8.png)
 
 .songListView .desc 
-  background-image: url(shared/down_arrow.gif)
+  background-image: url(shared/arrow_up_8x8.png)
