Adds pagination to the song list.  Closes #22.

--- a/app/views/songs/_listView.html.haml
+++ b/app/views/songs/_listView.html.haml
@@ -10,3 +10,5 @@
     .listItemActions= "Actions"
   - @songs.each do |song|
     = render :partial => "songs/listEntry", :locals => { :song => song }
+.pagination
+  = will_paginate @songs
