--- a/app/views/songs/_listView.html.haml
+++ b/app/views/songs/_listView.html.haml
@@ -1,5 +1,7 @@
 = hidden_field_tag :direction, params[:direction]
 = hidden_field_tag :sort, params[:sort]
+.pagination
+  = will_paginate @songs
 .songListView
   .listHeaderSection
     .mediaTitle=  sortable "title"
