--- a/app/views/songs/index.html.haml
+++ b/app/views/songs/index.html.haml
@@ -1,5 +1,3 @@
-%h1="Listing songs"
+%h1="Songs"
 
 = render :partial => "shared/searchList", :locals => { :formAction => 'index', :formController => 'songs', :searchFields => Song.searchFields, :partialView => 'songs/listView'}
-
-= link_to 'New Song', new_song_path
