[REQUIRES DB MIGRATION] Adds User login/create functionality
 * Requires BCrypt gem [Bundle install]
 * Adds User model/controller/views
 * Adds Session controller to maintain logged in/out status
 * Updates/Adds various maintenance to for functionality

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -3,3 +3,6 @@
   =link_to 'Home', root_path
   =link_to 'Songs', songs_path
   /=link_to 'Videos', videos_path
+= render "layouts/authentication"
+-flash.each do |name, msg|
+  = content_tag :div, msg, :id => "flash_#{name}"
