--- a/app/views/layouts/_authentication.html.haml
+++ b/app/views/layouts/_authentication.html.haml
@@ -1,8 +1,8 @@
 .authentication_nav
   - if current_user
     = "Logged in as " + current_user.email + "."
-    = link_to "Log out", log_out_path
+    = link_to "Log out", logout_path
   - else
-    = link_to "Sign up", sign_up_path 
+    = link_to "Sign up", signup_path 
     =" or "
-    = link_to "log in", log_in_path
+    = link_to "log in", login_path
