Updates Media Manager CSS and interface
 * Adds Bootstrap UI framework
  * Uses Sass version
  * Found @ https://github.com/thomas-mcdonald/bootstrap-sass
 * Updates home/index.html.haml for page framework
 * Fixes the navbar to work with login and bootstrap
 * Modifies Bootstrap with additions.css.scss and changes to the files from base.

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,1 +1,40 @@
-%h1= "GBits Media Manger"
+.hero-unit
+  %h1
+    Media Manager
+  %p
+    A great, new way to enjoy media files and connect with your friends.
+  %p
+    =link_to "Sign Up >", signup_path, :class => "btn primary large"
+      
+
+.row
+  .span6
+    %h2
+      Play Anywhere!
+    %p
+      Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
+    %p
+      %a{:class => "btn", :href => "#"}
+        View details &raquo;
+
+  .span5
+    %h2
+      Connect With Friends
+    %p
+      Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula.
+    %p
+      %a{:class => "btn", :href => "#"}
+        View details &raquo;
+
+  .span5
+    %h2
+      You Own The Files
+    %p
+      Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula.
+    %p
+      %a{:class => "btn", :href => "#"}
+        View details &raquo;
+
+%footer
+  %p
+    &copy; G-Bits 2011
