--- a/app/views/layouts/_authentication.html.haml
+++ b/app/views/layouts/_authentication.html.haml
@@ -1,8 +1,7 @@
-.authentication_nav
-  - if current_user
-    = "Logged in as " + current_user.email + "."
-    = link_to "Log out", logout_path
-  - else
-    = link_to "Sign up", signup_path 
-    =" or "
-    = link_to "log in", login_path
+- if current_user
+  %li
+    %a{:href => "#"}=current_user.email
+  %li= link_to "Log out", logout_path
+- else
+  %li=link_to "Sign up", signup_path
+  %li=link_to "log in", login_path
