--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,10 +1,10 @@
 %html
   %head
     %title="MediaManager"
-    = stylesheet_link_tag "application"
+    = stylesheet_link_tag "bootstrap/bootstrap", "application"
     = javascript_include_tag "application"
     = csrf_meta_tag
-  .body
-    = render :partial => "layouts/navbar"
-    %hr
-    = yield
+  %body
+    .container
+      = render :partial => "layouts/navbar"
+      = yield
