--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,23 +1,25 @@
 %h1="Sign Up"
 
-= form_for @user do |f|
-  - if @user.errors.any?
-    .error_messages
-      %h2="Form is invalid"
-      %ul
-        - for message in @user.errors.full_messages
-          %li= message
-  %p
-    = f.label :email
-    %br
-    = f.text_field :email
-  %p
-    = f.label :password
-    %br
-    = f.password_field :password
-  %p
-    = f.label :password_confirmation
-    %br
-    = f.password_field :password_confirmation
-  %p.button
-    = f.submit
+.span8
+  = form_for @user do |f|
+    .formContents
+      - if @user.errors.any?
+        .alert-message.block-message.error
+          %h2="Please resolve issues"
+          %ul
+            - for message in @user.errors.full_messages
+              %li= message
+      .clearfix
+        = f.label :email
+        .input
+          = f.text_field :email
+      .clearfix
+        = f.label :password
+        .input
+          = f.password_field :password
+      .clearfix
+        = f.label :password_confirmation
+        .input
+          = f.password_field :password_confirmation
+      .actions
+        = f.submit :value => "Sign up!", :class => "btn primary"
