Updates User Pages
 * Starts user page structure
 * Modifies CSS for user area
 * Adds login check function with redirect to application_controller.rb
 * Adds routes for initial user pages.
 * Fixes some Bootstrap css
 * Updates lots of views

--- a/app/views/layouts/songs.html.haml
+++ b/app/views/layouts/songs.html.haml
@@ -10,3 +10,6 @@
       = render :partial => "layouts/navbar"
       .content
         = yield
+      %footer
+        %p
+          &copy; G-Bits 2011
