--- a/app/views/layouts/_authentication.html.haml
+++ b/app/views/layouts/_authentication.html.haml
@@ -1,6 +1,5 @@
 - if current_user
-  %li
-    %a{:href => "#"}=current_user.email
+  %li= link_to current_user.email, edit_path
   %li= link_to "Log out", logout_path
 - else
   %li=link_to "Sign up", signup_path
