--- a/app/views/layouts/view.html.haml
+++ b/app/views/layouts/view.html.haml
@@ -9,3 +9,6 @@
       = render :partial => "layouts/navbar"
       .content
         = yield
+      %footer
+        %p
+          &copy; G-Bits 2011
