Completes UI overhaul
 * cleans up:
  * layouts
  * javascripts
  * css
 * Adds better authentication to controllers
 * Removes excess views.

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -6,9 +6,8 @@
   %p
     =link_to "Sign Up >", signup_path, :class => "btn primary large"
       
-
 .row
-  .span6
+  .span-one-third
     %h2
       Play Anywhere!
     %p
@@ -17,7 +16,7 @@
       %a{:class => "btn", :href => "#"}
         View details &raquo;
 
-  .span5
+  .span-one-third
     %h2
       Connect With Friends
     %p
@@ -26,7 +25,7 @@
       %a{:class => "btn", :href => "#"}
         View details &raquo;
 
-  .span5
+  .span-one-third
     %h2
       You Own The Files
     %p
