--- a/app/views/songs/_listView.html.haml
+++ b/app/views/songs/_listView.html.haml
@@ -1,17 +1,35 @@
 = hidden_field_tag :direction, params[:direction]
 = hidden_field_tag :sort, params[:sort]
 = will_paginate @songs
-.songListView
-  .listHeaderSection
-    .mediaTitle=  sortable "title"
-    .trackNumber= "Track"
-    .length= "Length"
-    .albumName= sortable "album"
-    .artistName= sortable "artist"
-    .playCount= sortable "playcount", "Plays"
-    .mediaRating= "Rating"
-    .listItemActions= "Actions"
+
+%table#table_main.zebra-striped
+  %thead
+    %tr
+      %th= sortable "title"
+      %th= "Track"
+      %th= "Length"
+      %th= sortable "album"
+      %th= sortable "artist"
+      %th= sortable "playcount", "Plays"
+      %th= "Rating"
+      %th= "Actions"
   - @songs.each do |song|
-    = render :partial => "songs/listEntry", :locals => { :song => song }
+    %tr
+      %td
+        %a{:href => "/view/song/" + song.id.to_s}= song.title
+      %td
+        !=display_nillable(song.tracknumber)
+      %td
+        !=display_nillable(song.length)
+      %td
+        !=display_nillable(song.album)
+      %td
+        !=display_nillable(song.artist)
+      %td
+        !=display_nillable(song.playcount)
+      %td
+        !=display_nillable(song.rating)
+      %td
+        .editLink{:id => ["editLink_" + song.id.to_s]}="edit"
 = will_paginate @songs
 = page_entries_info @songs
