fixes full page layout to show flash messages.

--- a/app/views/layouts/full_page.html.haml
+++ b/app/views/layouts/full_page.html.haml
@@ -8,6 +8,8 @@
     .container
       = render :partial => "layouts/navbar"
       .content
+        -flash.each do |name, msg|
+          = content_tag :div, msg, :id => "flash_#{name}", :class => "alert-message " + name.to_s
         = yield
       %footer
         %p
