--- a/app/views/layouts/_side_bar.html.haml
+++ b/app/views/layouts/_side_bar.html.haml
@@ -1,3 +1,6 @@
 %h3
   Side Bar
-=link_to "Home", home_path
+%ul.unstyled
+  %li= link_to "Home", home_path
+  %li= link_to "Edit Profile", edit_path
+  %li= link_to "Songs", songs_path
