[Requires DB Migration] Upgrades Users
 * Adds properties to user
 * Updates user edit page
 * Adds user profile routing
 * Many CSS and view updates

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,14 +8,14 @@
     .container
       = render :partial => "layouts/navbar"
       .content
-        .page-header
+        .main-page-header
           -flash.each do |name, msg|
             = content_tag :div, msg, :id => "flash_#{name}", :class => "alert-message " + name.to_s
           = yield :header
         .row
-          .span4
+          .span3
             = render "layouts/side_bar"
-          .span12
+          .span13
             = yield
       %footer
         %p
