--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,18 +34,21 @@ body {
           box-shadow: 0 1px 2px rgba(0,0,0,.15);
 }
 
-.page-header {
+.main-page-header {
   background-color: #f5f5f5;
-  padding: 20px 20px 10px;
+  padding: 20px 20px 0px;
   margin: -20px -20px 20px;
+  -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+  border-bottom: 1px solid #DDDDDD;
+  margin-bottom: 17px;
 }
 
-.content .span10,
-.content .span4 {
+.content .span13,
+.content .span3 {
   min-height: 500px;
 }
 
-.content .span4 {
+.content .span3 {
   margin-left: 15px;
   margin-right: 0;
   border-right: 1px solid #eee;
