--- a/app/views/password_resets/edit.html.haml
+++ b/app/views/password_resets/edit.html.haml
@@ -1,18 +1,21 @@
-%h1
-  Password Reset
-
-= form_for @user, :url => password_reset_path(params[:id]) do |f| 
-  -if @user.errors.any?
-    .error_messages
-      %h2
-      Form is invalid
-      %ul
-        - for message in @user.errors.full_messages
-          %li= message
-  .field
-    = f.label :password
-    = f.password_field :password
-  .field
-    = f.label :password_confirmation
-    = f.password_field :password_confirmation
-  .actions= f.submit "Update Password"
+- content_for :header do
+  %h1
+    Reset Password
+.span8
+  = form_for @user, :url => password_reset_path(params[:id]) do |f|
+    .formContents 
+      -if @user.errors.any?
+        .alert-message.block-message.error
+          %h2="Please resolve issues"
+          %ul
+            - for message in @user.errors.full_messages
+              %li= message
+      .clearfix
+        = f.label :password
+        .input
+          = f.password_field :password
+      .clearfix
+        = f.label :password_confirmation
+        .input
+          = f.password_field :password_confirmation
+      .actions= f.submit "Update Password", :class => "btn primary"
