[Requires DB Migration]Tons of changes
 * Adds Artist and Album models/album.rb
 * Adds rails model associations
 * Adds new fields to song model including public_token
 * Modifies displayed songs based on authenticated user.rb
 * FINALLY adds ability for a user to upload a song
 * Makes songs playable through all the changes
 * Locks out /view and /play
 * Adds a user check, so logged in user can't consume media not owned by them
 * Adds paperclip requires 'bundle install'
 * Fixes some nil property errors
 * Cleans up DataAccess.rb

--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -12,8 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :filename %><br />
-    <%= f.text_field :filename %>
+    <%= f.file_field :file %><br />
   </div>
   <div class="field">
     <%= f.label :title %><br />
@@ -34,10 +33,6 @@
   <div class="field">
     <%= f.label :year %><br />
     <%= f.text_field :year %>
-  </div>
-  <div class="field">
-    <%= f.label :owner %><br />
-    <%= f.text_field :owner %>
   </div>
   <div class="field">
     <%= f.label :albumart %><br />
