Adds additional song functionality.
 * Adds ability to scrape mp3 id tags for song info
 * Creates artist and album entries based on scraped info
 * Adds song file organization to the song class as
  * /artist/album/track# - title.ext

--- a/app/views/songs/index.html.haml
+++ b/app/views/songs/index.html.haml
@@ -2,17 +2,8 @@
   %h1="Songs"
 
 - if @songs
+  = render :partial => "songs/song_upload_form", :locals => { :heading_message => 'Upload another song', :secondary_message => 'Upload more songs to build up your library' }
   = render :partial => "shared/searchList", :locals => { :formAction => 'index', :formController => 'songs', :searchFields => Song.searchFields, :partialView => 'songs/listView'}
 - else
-  .alert-message.block-message.info
-    %h1
-      You have no songs available yet
-    %p
-      Please upload a song to get started
-    =form_for @song, :html => { :multipart => true, :class => "noBorder"} do |f|
-      .formContents
-        .clearfix
-          = f.file_field :file
-          = submit_tag "Upload", :name => nil, :class => "btn primary"
-
+  = render :partial => "songs/song_upload_form", :locals => { :heading_message => 'You have no songs available yet', :secondary_message => 'Please upload a song to get started' }
   
