Updates playing ability
 * makes jplayer use public tokens
 * adds a bunch of http headers to the send_file function

--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -50,31 +50,31 @@
       .clearfix
         = f.label :tvshows, "Television Shows"
         .input
-          = f.text_area(:tvshows, :rows => 4)
+          = f.text_area(:tvshows, :rows => 4, :class => 'xxlarge')
           %span.help-block
             Enter your favorite television shows separated by a ',' or ';' 
       .clearfix
         = f.label :movies
         .input
-          = f.text_area(:movies, :rows => 4)
+          = f.text_area(:movies, :rows => 4, :class => 'xxlarge')
           %span.help-block
             Enter your favorite movies separated by a ',' or ';' 
       .clearfix
         = f.label :artists
         .input
-          = f.text_area(:artists, :rows => 4)
+          = f.text_area(:artists, :rows => 4, :class => 'xxlarge')
           %span.help-block
             Enter your favorite musicians separated by a ',' or ';' 
       .clearfix
         = f.label :albums
         .input
-          = f.text_area(:albums, :rows => 4)
+          = f.text_area(:albums, :rows => 4, :class => 'xxlarge')
           %span.help-block
             Enter your favorite music albums separated by a ',' or ';' 
       .clearfix
         = f.label :liveshows, "Concerts"
         .input
-          = f.text_area(:liveshows, :rows => 4)
+          = f.text_area(:liveshows, :rows => 4, :class => 'xxlarge')
           %span.help-block
             Enter the concerts you have been to separated by a ',' or ';' 
       .actions
