--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,6 +1,6 @@
 .hero-unit
   %h1
-    Media Manager
+    Media Manager (Pre-Alpha)
   %p
     A great, new way to enjoy media files and connect with your friends.
   %p
