[REQUIRES DB MIGRATION] Adds status updates and adds some new functionality
 * Adds status updates (as notices) and the ability to write public messages to users
 * Updates user profile to display notices and newly uploaded songs
 * Adds artist controller and route to artist page

--- a/app/views/users/_user_header.html.haml
+++ b/app/views/users/_user_header.html.haml
@@ -1,9 +1,7 @@
 %h1
-  - if @user.firstname
-    = @user.firstname + " " + @user.lastname
+  = @user.display_name
+  -if @user.city
     %small= @user.city + ", " + @user.country
-  - else
-    = @user.email
 - if @user.firstname
   %h5= @user.email
 
