--- a/app/views/layouts/_authentication.html.haml
+++ b/app/views/layouts/_authentication.html.haml
@@ -1,6 +1,6 @@
 - if current_user
   %li= link_to current_user.email, { :controller => "users", :action => "view", :id => current_user.public_token }
-  %li= link_to "Log out", logout_path
+  %li= link_to "log out", logout_path
 - else
   %li=link_to "Sign up", signup_path
   %li=link_to "log in", login_path
